--- a/public/assets/css/upload.css
+++ b/public/assets/css/upload.css
@@ -13,12 +13,11 @@
     --text-color: #071e3d;
     --search-bar: #071e3d;
     --search-text: #fefeff;
+    --inputbtn: #E4E9F7;
 }
 
 body{
     height: 100vh;
-    align-items: center;
-    justify-content: center;
     display: auto;
     background-color: var(--body-color);
 }
@@ -29,6 +28,7 @@ body.dark{
     --side-nav: #071e3d;
     --text-color: #fefeff;
     --search-bar: #071e3d;
+    --inputbtn: #E4E9F7;
 }
 .card {
 
@@ -44,30 +44,20 @@ body.dark{
 }
 form {
     padding: 30px;
-    /* margin-top: 70px; */
     width: 100%;
-    justify-content: center;
-    align-items: center;
     display: block;
 }
 
-.formtext {
-    justify-items: center;
-    align-items: center;
-}
 .formtext input {
     width: 100%;
     height: 50px;
-    background-color: var(--side-nav);
-    justify-content: center;
-    align-items: center;
+    background-color: var(--inputbtn);
+
 }
 .formtext input:active {
     width: 100%;
     height: 50px;
     background-color: var(--side-nav);
-    justify-content: center;
-    align-items: center;
 }
 
 .btn {
