--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -59,26 +59,57 @@ body.dark{
 /* card show photo */
 .card-show-photo {
     background-color: #fff;
-    height: 1000px;
-    width: 100%;
+    height: 1100px;
+    width: auto;
     max-width: auto;
-    max-height: 1200px;
+    max-height: 100%;
 }
 .image-card img {
     width: auto;
-    height: auto;
+    height: 100%;
     margin-top: 30px;
     max-height: 700px;
     object-fit: cover;
-    /* object-fit: cover; */
 }
 
 
-
-
-
-
-
-
+/* share to social media */
+.social-btn-sp #social-links {
+    position: relative;
+    max-width: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+.social-btn-sp #social-links ul {
+    justify-content: center;
+    padding: 0;
+}
+.social-btn-sp #social-links ul li {
+    justify-content: center;
+    display: inline-block;
+}
+.social-btn-sp .fab, .fa-brands {
+    font-family: 'Font Awesome 6 Brands';
+    width: 25px;
+}
+.social-btn-sp #social-links ul li a {
+    padding: 6px;
+    border: none;
+    border-radius: 50%;
+    background-color: #E4E9F7;
+    color: #071e3d;
+    margin: 3px;
+    font-size: 18px;
+    align-items: center;
+}
+.social-btn-sp #social-links ul li a:hover {
+    padding: 6px;
+    background-color: #071e3d;
+    color: white;
+    margin: 3px;
+    font-size: 18px;
+    align-items: center;
+}
 
 
