--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -57,19 +57,18 @@ body.dark{
 
 /* ============================================================ */
 /* card show photo */
-.card-show-photo {
-    background-color: #fff;
-    height: 1100px;
+.image-card {
     width: auto;
-    max-width: auto;
-    max-height: 100%;
-}
-.image-card img {
-    width: auto;
-    height: 100%;
-    margin-top: 30px;
+    height: auto;
     max-height: 700px;
-    object-fit: cover;
+    max-width: 100%;
+    /* object-fit: cover; */
+}
+.card-containers {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
 
 
@@ -87,6 +86,7 @@ body.dark{
 }
 .social-btn-sp #social-links ul li {
     justify-content: center;
+    align-items: center;
     display: inline-block;
 }
 .social-btn-sp .fab, .fa-brands {
